<resources>
    <string name="app_name">LembretesTask</string>
    <string name="tasks">Tarefas</string>
    <string name="titulo">Título</string>
    <string name="data">Data</string>
    <string name="time">Hora</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="nova_tarefa_desc">Nova Tarefa</string>
    <string name="item_edit">Editar</string>
    <string name="item_cancel">Cancelar</string>
</resources>